fix: corner bleeding for webview finally fixed!

--- a/modules/border.css
+++ b/modules/border.css
@@ -111,7 +111,7 @@ body > hbox {
   }
 } */
 
-@media (-moz-bool-pref: "zen.view.use-single-toolbar"){
+@media (-moz-pref("zen.view.use-single-toolbar")) {
   @media not (-moz-bool-pref: "wireframe.urlbar.position.top"){
     :root[zen-sidebar-expanded="true"]:not([zen-compact-mode="true"]):not([inDOMFullscreen="true"]) #zen-tabbox-wrapper {
       margin-bottom: calc( var(--na-window-margin) - 10px ) !important;
@@ -136,7 +136,8 @@ body > hbox {
  border-radius: 0px !important;
 }
 
-/* Apply the user-defined border radius */
+/* WEBVIEW BORDER RADIUS */
+
 :root[zen-right-side="true"]:not([zen-compact-mode="true"]):not([inDOMFullscreen="true"]) #zen-tabbox-wrapper {
   border-radius: var(--na-user-border-radius) !important;
 }
@@ -145,7 +146,15 @@ body > hbox {
   border-radius: var(--na-user-border-radius) !important;
 }
 
-@media (-moz-bool-pref: "zen.view.use-single-toolbar") {
+/* ADD WEBVIEW BORDER RADIUS TO CHILDREN ELEMENTS OF TABBOX */
+@media not (-moz-pref("wireframe.nogaps.enabled")){
+  #tabbrowser-tabpanels > hbox{
+    border-radius: var(--na-user-border-radius) !important;
+    transition: border-radius 0.18s linear !important;
+  }
+}
+
+@media (-moz-pref("zen.view.use-single-toolbar")) {
   :root:has(#tabbrowser-tabpanels [zen-split])[zen-compact-mode="true"][zen-sidebar-expanded="true"] #zen-tabbox-wrapper {
     margin: var(--na-window-margin) !important;
  }
@@ -157,7 +166,7 @@ body > hbox {
  }
 }
 
-@media (-moz-bool-pref: "zen.view.use-single-toolbar") {
+@media (-moz-pref("zen.view.use-single-toolbar"))  {
   :root:has(#tabbrowser-tabpanels [zen-split])[zen-compact-mode="true"] #zen-tabbox-wrapper {
     margin: var(--na-window-margin) !important;
   }
@@ -257,7 +266,7 @@ body > hbox {
 
 /* === NO GAPS === */
 
-@media (-moz-bool-pref: "zen.view.use-single-toolbar"){
+@media (-moz-pref("zen.view.use-single-toolbar")) {
   @media (-moz-pref("wireframe.nogaps.enabled")) {
     :root {
       --zen-element-separation: 0px !important;
